# WATTMAN-HRJ

./: CMakeLists.txt  README.md  main.cpp  point2plane_ICP.cpp  point2plane_ICP.h  编程题.txt
ply_data/: cloud_002.ply  cloud_002_trans.ply  cloud_003.ply  cloud_registered.ply
